use_undefined_identifier/c1/Rook
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/Rook/src/neval.c:762:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[sq] != 13 ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/Rook/src/neval.c:771:6: error: use of undeclared identifier 'Rook_square_d1'
v7 = Rook_square_d1[c]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/Rook/src/obj/neval.o] Error 1
